Dropped 2.2.7 from build
2.2.7 doesn't support passing admin details to setup:install making it incompatible with the demo start script:

```
User Name is a required field.
First Name is a required field.
Last Name is a required field.
Please enter a valid email.
Password is required field.
Your password must be at least 7 characters.
Your password must include both numeric and alphabetic characters.

                               
  [InvalidArgumentException]   
  Parameter validation failed  
```

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           - "2.3"
         include:
           - MAJOR_VERSION: "2.2"
-            BUILD_VERSIONS: "2.2.9 2.2.8 2.2.7"
+            BUILD_VERSIONS: "2.2.9 2.2.8"
 
           - MAJOR_VERSION: "2.3"
             BUILD_VERSIONS: "2.3.2 2.3.1 2.3.0"
