--- a/2.2/sampledata/Dockerfile
+++ b/2.2/sampledata/Dockerfile
@@ -2,11 +2,12 @@ FROM davidalger/warden:mage2-fpm-7.1
 
 ARG COMPOSER_AUTH
 ARG MAGENTO_VERSION
+ARG MAGENTO_EDITION
 
 RUN rmdir /var/www/html/pub \
     && composer global require hirak/prestissimo \
     && composer create-project --no-interaction --repository=https://repo.magento.com/ \
-        magento/project-community-edition /var/www/html ${MAGENTO_VERSION} \
+        magento/project-${MAGENTO_EDITION}-edition /var/www/html ${MAGENTO_VERSION} \
     && rm -rf "$(composer config -g home)"
 
 RUN bin/magento sampledata:deploy && rm -rf var/composer_home
