--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,10 @@ jobs:
           - "2.3"
         include:
           - MAJOR_VERSION: "2.2"
-            BUILD_VERSIONS: "2.2.10 2.2.9"
+            BUILD_VERSIONS: "2.2.10 2.2.9 2.2.8"
 
           - MAJOR_VERSION: "2.3"
-            BUILD_VERSIONS: "2.3.3 2.3.2"
+            BUILD_VERSIONS: "2.3.3 2.3.2 2.3.1 2.3.0"
 
     steps:
     - uses: actions/checkout@v1
