Setup build-database step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,16 @@ jobs:
   build:
     name: Magento ${{ matrix.MAJOR_VERSION }} (${{ matrix.MAGENTO_EDITION }})
     runs-on: ubuntu-latest
+    services:
+      mariadb:
+        image: mariadb:10.3
+        env:
+          MYSQL_RANDOM_ROOT_PASSWORD: true
+          MYSQL_DATABASE: magento
+          MYSQL_USER: magento
+          MYSQL_PASSWORD: magento
+        options: "--name mariadb"
+
     strategy:
       fail-fast: false
       matrix:
@@ -34,13 +44,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: build
+
+    - name: Build artifact
       run: |
-        set -x
-        if [ "{{ github.event }}" == "push" ]; then
-          ./scripts/build.sh --push
-        else
-          ./scripts/build.sh
+        if [ "{{ github.event }}" == "push" ];
+          then ./scripts/build.sh --push
+          else ./scripts/build.sh
         fi
       env:
         COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
@@ -51,3 +60,20 @@ jobs:
         DOCKER_REGISTRY: docker.io
         MAGENTO_EDITION: ${{ matrix.MAGENTO_EDITION }}
         IMAGE_NAME: ${{ matrix.IMAGE_NAME }}
+
+    - name: Build database
+      run: |
+        for suffix in "" "-sampledata"; do
+          docker run --rm --network "$(docker network ls --filter 'name=github' --format '{{ .Name }}')" \
+            -w /var/www/html docker.io/davidalger/magento:${{ matrix.major_version }}${suffix} \
+            php bin/magento setup:install \
+              --cleanup-database --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento
+
+          docker stop mariadb
+          docker commit mariadb docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
+          docker start mariadb && sleep 10
+
+          if [ "{{ github.event }}" == "push" ]; then
+            docker image push docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
+          fi
+        done
