--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
     - master
-  pull_request:
 
 jobs:
   build:
@@ -46,11 +45,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Build artifact
-      run: |
-        if [ "${{ github.event }}" == "push" ];
-          then ./scripts/build.sh --push
-          else ./scripts/build.sh
-        fi
+      run: ./scripts/build.sh --push
       env:
         COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
         BUILD_VERSIONS: ${{ matrix.BUILD_VERSIONS }}
@@ -73,7 +68,6 @@ jobs:
           docker commit mariadb docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
           docker start mariadb && sleep 10
 
-          if [ "${{ github.event }}" == "push" ]; then
-            docker image push docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
-          fi
+          docker commit mariadb docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
+          docker image push docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
         done
