--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,9 +64,8 @@ jobs:
             php bin/magento setup:install \
               --cleanup-database --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento
 
-          docker stop mariadb
-          docker commit mariadb docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
-          docker start mariadb && sleep 10
+          docker exec -it mariadb bash -c 'mysqldump -umagento -pmagento magento \
+            | gzip -c > /docker-entrypoint-initdb.d/artifact.sql.gz'
 
           docker commit mariadb docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
           docker image push docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
