Refactored image build to generate database from within the docker build to resolve missing media files
As a result of 404'ing images in pub/media it was discovered that (for example) the setup:install routine generates new images in pub/media for configurable products. For example, the image wsh03-gray_main.jpg is installed by the module, but after setup:install wsh03-gray_main_1.jpg and wsh03-gray_main_2.jpg are also present, so separating the build routines for these caused the used images to not be found. Combining them like this should result in images all being present no matter if they are installed during setup:install or on module deployment.

This also addresses the need to previously copy in styles.css fixtures to pub/media/styles.css which is also created by the setup:install process.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,6 @@ jobs:
   build:
     name: Magento ${{ matrix.MAJOR_VERSION }} (${{ matrix.MAGENTO_EDITION }})
     runs-on: ubuntu-latest
-    services:
-      mariadb:
-        image: mariadb:10.3
-        env:
-          MYSQL_RANDOM_ROOT_PASSWORD: true
-          MYSQL_DATABASE: magento
-          MYSQL_USER: magento
-          MYSQL_PASSWORD: magento
-        options: "--name mariadb"
-
     strategy:
       fail-fast: false
       matrix:
@@ -44,8 +34,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Build artifact
-      run: ./scripts/build.sh --push
+    - run: ./scripts/build.sh --push
       env:
         COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
         BUILD_VERSIONS: ${{ matrix.BUILD_VERSIONS }}
@@ -55,18 +44,3 @@ jobs:
         DOCKER_REGISTRY: docker.io
         MAGENTO_EDITION: ${{ matrix.MAGENTO_EDITION }}
         IMAGE_NAME: ${{ matrix.IMAGE_NAME }}
-
-    - name: Build database
-      run: |
-        for suffix in "" "-sampledata"; do
-          docker run --rm --network "$(docker network ls --filter 'name=github' --format '{{ .Name }}')" \
-            -w /var/www/html docker.io/davidalger/magento:${{ matrix.major_version }}${suffix} \
-            php bin/magento setup:install \
-              --cleanup-database --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento
-
-          docker exec mariadb bash -c 'mysqldump -umagento -pmagento magento \
-            | gzip -c > /docker-entrypoint-initdb.d/artifact.sql.gz'
-
-          docker commit mariadb docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
-          docker image push docker.io/davidalger/magento:${{ matrix.major_version }}-mariadb${suffix}
-        done
