--- a/sampledata/Dockerfile
+++ b/sampledata/Dockerfile
@@ -23,17 +23,22 @@ RUN if [[ ${COMPOSER_PKGS} ]]; \
 RUN mkdir -p var/composer_home \
     && ln -s /root/.composer/cache var/composer_home/cache \
     && bin/magento sampledata:deploy \
-    && rm -rf var/composer_home
+    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
 
 COPY config.php app/etc/config.php
 RUN bin/magento module:enable --all \
     && bin/magento setup:di:compile \
-    && bin/magento setup:static-content:deploy -f -j $(nproc)
+    && bin/magento setup:static-content:deploy -f -j $(nproc) \
+    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
 
 ## Requires aliased mariadb container on build network; see build.sh for details
 RUN bin/magento setup:install --cleanup-database \
         --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento \
-    && rm -f app/etc/env.php
+    && rm -f app/etc/env.php \
+    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
+
+RUN bin/magento catalog:images:resize \
+    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
 
 FROM davidalger/php:${PHP_VERSION}-fpm
 COPY php.d/*.ini /etc/php.d/
