Moved catalog image resize to db install step (it will fail after env.php is removed)

--- a/sampledata/Dockerfile
+++ b/sampledata/Dockerfile
@@ -34,10 +34,8 @@ RUN bin/magento module:enable --all \
 ## Requires aliased mariadb container on build network; see build.sh for details
 RUN bin/magento setup:install --cleanup-database \
         --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento \
+    && bin/magento catalog:images:resize \
     && rm -f app/etc/env.php \
-    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
-
-RUN bin/magento catalog:images:resize \
     && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
 
 FROM davidalger/php:${PHP_VERSION}-fpm
