--- a/sampledata/Dockerfile
+++ b/sampledata/Dockerfile
@@ -22,21 +22,22 @@ RUN if [[ ${COMPOSER_PKGS} ]]; \
 ## Install sampledata modules
 RUN mkdir -p var/composer_home \
     && ln -s /root/.composer/cache var/composer_home/cache \
-    && bin/magento sampledata:deploy \
-    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
+    && bin/magento sampledata:deploy
 
 COPY config.php app/etc/config.php
 RUN bin/magento module:enable --all \
     && bin/magento setup:di:compile \
-    && bin/magento setup:static-content:deploy -f -j $(nproc) \
-    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
+    && bin/magento setup:static-content:deploy -f -j $(nproc)
 
 ## Requires aliased mariadb container on build network; see build.sh for details
 RUN bin/magento setup:install --cleanup-database \
-        --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento \
-    && bin/magento catalog:images:resize \
-    && rm -f app/etc/env.php \
-    && find var -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
+        --db-host=mariadb --db-name=magento --db-user=magento --db-password=magento
+
+## Can only run this when there are images present (i.e. sampledata is installed)
+RUN bin/magento catalog:images:resize
+
+## Clean all the cruft out before copying files into final image
+RUN find var app/etc/env.php -maxdepth 1 '!' -name var '!' -name .htaccess -exec rm -rvf {} +
 
 FROM davidalger/php:${PHP_VERSION}-fpm
 COPY php.d/*.ini /etc/php.d/
